test/types/cptr/c_ptrTo_domain.3.good
c_ptrTo_domain.chpl:10: error: c_addrOf domain type not supported
