test/types/cptr/c_ptrTo_domain.compopts
-sfuncToTest='"c_ptrTo"'       # c_ptrTo_domain.1.good
-sfuncToTest='"c_ptrToConst"'  # c_ptrTo_domain.2.good
-sfuncToTest='"c_addrOf"'      # c_ptrTo_domain.3.good
-sfuncToTest='"c_addrOfConst"' # c_ptrTo_domain.4.good
